--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "merge-table-header",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.1",
+  "private": false,
+  "main": "dist/mergeTableHeader.umd.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "ui": "vue-cli-service build --target lib ./src/index.js --dest dist --name mergeTableHeader"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -20,7 +22,8 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "merge-table-header": "^0.1.0"
   },
   "eslintConfig": {
     "root": true,
